Setup errorprone and lombok to work together in maven
lombok.config