@@ -49,8 +49,25 @@
     <es.version>8.14.1</es.version>
     <jackson.version>2.17.0</jackson.version>
     <spotless.version>2.43.0</spotless.version>
+    <lombok.version>1.18.34</lombok.version>
+    <errorProne.version>2.18.0</errorProne.version>
+    <pmd.version>6.42.0</pmd.version>
+    <errorProne.version>2.29.0</errorProne.version>
+    <!-- build -->
+    <fork.javac>false</fork.javac>
+    <javac.maxHeapSize>256M</javac.maxHeapSize>
+    <!-- quality assurance -->
+    <lint>deprecation,unchecked</lint>
+    <qa>false</qa>
+    <checkstyle.skip>false</checkstyle.skip>
+    <errorProneFlags></errorProneFlags>
+    <!--errorProneFlags>-XepDisableWarningsInGeneratedCode</errorProneFlags-->
+    <!-- formatting -->
+    <spotless.action>apply</spotless.action>
+    <spotless.apply.skip>false</spotless.apply.skip>
+    <pom.fmt.action>sort</pom.fmt.action>
+    <pom.fmt.skip>${spotless.apply.skip}</pom.fmt.skip>
   </properties>
-
 
   <profiles>
     <!-- Use -Drelax property to avoid:
@@ -65,11 +82,26 @@
         </property>
       </activation>
       <properties>
+        <qa>false</qa>
         <maven.test.skip>true</maven.test.skip>
       </properties>
     </profile>
+
     <profile>
       <id>full-build</id>
+      <activation>
+        <property>
+          <name>!relax</name>
+        </property>
+      </activation>
+      <properties>
+        <qa>true</qa>
+        <maven.test.skip>false</maven.test.skip>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>spotless</id>
       <activation>
         <property>
           <name>!relax</name>
@@ -85,7 +117,6 @@
           <plugin>
             <groupId>com.diffplug.spotless</groupId>
             <artifactId>spotless-maven-plugin</artifactId>
-            <version>${spotless.version}</version>
             <executions>
               <execution>
                 <goals>
@@ -110,10 +141,21 @@
               </java>
             </configuration>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>checkstyle</id>
+      <activation>
+        <property>
+          <name>!relax</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.4.0</version>
             <executions>
               <execution>
                 <id>check</id>
@@ -128,12 +170,63 @@
               <logViolationsToConsole>true</logViolationsToConsole>
               <maxAllowedViolations>0</maxAllowedViolations>
               <violationSeverity>warning</violationSeverity>
-              <suppressionsLocation>checkstyle_suppressions.xml</suppressionsLocation>
+              <suppressionsLocation>build/checkstyle_suppressions.xml</suppressionsLocation>
             </configuration>
           </plugin>
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>errorprone</id>
+      <activation>
+        <property>
+          <name>qa</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <fork>true</fork>
+              <showWarnings>true</showWarnings>
+              <compilerArgs>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-XDcompilePolicy=simple</arg>
+                <arg>-Xplugin:ErrorProne -XepExcludedPaths:\Q${project.build.directory}\E.* ${errorProneFlags}</arg>
+                <arg>-Xlint:${lint}</arg>
+                <arg>-Werror</arg>
+                <arg>-Xmaxwarns</arg>
+                <arg>1000</arg>
+              </compilerArgs>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+                  <version>${lombok.version}</version>
+                </path>
+                <path>
+                  <groupId>com.google.errorprone</groupId>
+                  <artifactId>error_prone_core</artifactId>
+                  <version>${errorProne.version}</version>
+                </path>
+              </annotationProcessorPaths>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
 
@@ -188,6 +281,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -220,7 +314,43 @@
   </dependencyManagement>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>3.4.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+        </plugin>
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>${spotless.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>com.mycila</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>4.5</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <plugins>
+      <!-- compilation -->
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <debug>true</debug>
+          <encoding>UTF-8</encoding>
+          <fork>${fork.javac}</fork>
+          <maxmem>${javac.maxHeapSize}</maxmem>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
